fixed the line break on the feature box

--- a/styles/productPage/Features.module.scss
+++ b/styles/productPage/Features.module.scss
@@ -20,7 +20,7 @@
         letter-spacing: 2px;
     }
     p {
-        color: V.$gray;
+        color: V.$slate;
         line-height: 1.75;
         font-size: .975rem;
         margin-bottom: 3.25rem;
@@ -45,7 +45,7 @@
             width: 100%;
             margin: .5rem auto;
             margin-left: -2.5rem;
-            color: V.$gray;
+            color: V.$slate;
         }
         .count {
         color: V.$orange;
